# So_Long

./: CMakeLists.txt  Makefile  README.md  so_long  so_long.h
ft_printf/: Makefile  ft_printf.h  ft_putstr.c  ft_strlen.c
inc/: so_long.h
libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+5 more)
maps/: map_0.bea  map_0.ber  map_1.ber
src/: sl_checks_util.c  sl_checks_util_2.c  sl_ckecks_util_2.c  sl_exit.c  sl_movements.c  sl_place_textures.c  sl_utils.c  so_long.c  testing.c
textures/: bricks.xpm  bricks_bad.xpm  cesped.xpm  cesped2.xpm  exit.xpm  grass_redim.xpm  poo.xpm  toilet.xpm
